[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/TransactionLog.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Controls/TransactionColumns.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Controls/ActionButtonContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Controls/BaseActionButton.tscn" type="PackedScene" id=4]

[node name="TransactionLog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -71.9999
margin_bottom = -176.0
rect_min_size = Vector2( 952, 424 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
margin_bottom = 3.05176e-05
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="MarginContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 936.0
margin_bottom = 408.0
color = Color( 0.207843, 0.231373, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 936.0
margin_bottom = 408.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButtonContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 920.0
margin_bottom = 72.0

[node name="CalculateSellButton" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer" index="0"]
rect_min_size = Vector2( 136, 40 )

[node name="MarginContainer" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/CalculateSellButton" index="0"]
margin_right = 152.0
margin_bottom = 40.0
rect_min_size = Vector2( 136, 40 )

[node name="Button" parent="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/CalculateSellButton/MarginContainer" index="0"]
margin_right = 198.0
rect_min_size = Vector2( 136, 40 )
text = "ADD SELL TRANSACTION"

[node name="TransactionColumns" parent="MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 76.0
margin_right = 920.0
margin_bottom = 132.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 920.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trasactions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 920.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BaseActionButton" parent="." instance=ExtResource( 4 )]
anchor_left = 0.908
anchor_top = 0.792
anchor_right = 0.966
anchor_bottom = 0.925
margin_left = -0.416077
margin_top = 0.192017
margin_right = 0.36792
margin_bottom = -0.200012
[connection signal="CalcualteSellClicked" from="MarginContainer/VBoxContainer/ActionButtonContainer" to="." method="_on_ActionButtonContainer_CalcualteSellClicked"]
[connection signal="DeleteClicked" from="MarginContainer/VBoxContainer/ActionButtonContainer" to="." method="_on_ActionButtonContainer_DeleteClicked"]
[connection signal="pressed" from="BaseActionButton" to="." method="_on_BaseActionButton_pressed"]

[editable path="MarginContainer/VBoxContainer/ActionButtonContainer"]

[editable path="MarginContainer/VBoxContainer/ActionButtonContainer/MarginContainer/HBoxContainer/CalculateSellButton"]
